alignment of images, minor fixes

--- a/sass/components/_section-history.scss
+++ b/sass/components/_section-history.scss
@@ -138,6 +138,7 @@
       margin-top: 150px;
       // min-height: 350px;
       font-size: 14px;
+      padding: 20px;
     }
 
     .monopoly {
@@ -198,11 +199,10 @@
       margin-bottom: 10px;
       color: white;
       padding: 20px;
-      box-shadow: -5px 5px 15px -2px rgb(84, 77, 77);
       text-align: justify;
       line-height: 26px;
       border-radius: 10px;
-
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7);
       img {
         // position: relative;
         // top: 17px;
