--- a/sass/media-queries/_section-history.scss
+++ b/sass/media-queries/_section-history.scss
@@ -32,6 +32,9 @@
       }
       img {
         margin: 0;
+        position: relative;
+        left: 0;
+        transform: translateX(0);
         width: 110px;
         height: 110px;
       }
@@ -62,10 +65,6 @@
 
     .arrow {
       display: none;
-    }
-
-    .fifth {
-      box-shadow: 0 5px 15px -2px #544d4d;
     }
   }
 }
